# jafrisentimentpredictor

./: .gitignore  README.md
jafrisentimentpredictor/: pyproject.toml
jafrisentimentpredictor/src/jafrisentimentpredictor/: features.py
src/jafrisentimentpredictor/: data.py  model.py  pipeline.py  server.py
