[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jafrisentimentpredictor"
version = "0.1.0"
dependencies = [
    "pandas",
    "yfinance",
    "scikit-learn",
    "lightgbm",
    "vaderSentiment",
    "fastapi",
    "uvicorn[standard]"
]
requires-python = ">=3.10"
